--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,12 +1,16 @@
 <html>
-<header class="nav">{{>header}}</header>
+
 <title>Weather App</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <body>
-<div class="card" style="width: 24rem;">
+    <h4>{{appName}}</h4>
+    <hr>
+<div class="card" style="width: 18rem;">
+      <img class="card-img-top" src="{{icon}}" alt="Card image cap" width="50" height="200">
      <div class="card-body">
-    <h1 class="card-title"></h1>Welcome to {{appName}}</h1> 
+    <h1 class="card-title">{{Place}}</h1> 
+     <p class="card-text">Temperature is {{Temp}}</p>
     </div>
     </div>
 </body>
