--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,18 +1,30 @@
 <html>
 
 <title>Weather App</title>
+<header> {{>header}}</header>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <body>
-    <h4>{{appName}}</h4>
-    <hr>
-<div class="card" style="width: 18rem;">
-      <img class="card-img-top" src="{{icon}}" alt="Card image cap" width="50" height="200">
+ <div class="d-flex justify-content-center">
+
+<div class="card" style="width: 24rem;">
+      <img class="card-img-top" src="{{icon}}" alt="Card image cap" width="150" height="200">
      <div class="card-body">
     <h1 class="card-title">{{Place}}</h1> 
-     <p class="card-text">Temperature is {{Temp}}</p>
+     <h5 class="card-title">{{Country}} </h5> 
+     <h4 style="text-align:left">{{weatherdesc}}</h4>
+     <p class="card-text">Feels Like : {{feelslike}}</p>
+     <p class="card-text">LocalTime : {{localtime}}</p>
+     <p class="card-text">Observation Time : {{observationtime}}</p>
+     <p class="card-text">Temperature : {{Temp}}</p>
+       <p class="card-text">Wind Speed : {{windspeed}}</p>
+         <p class="card-text">Wind Direction : {{winddirection}}</p>
+           <p class="card-text">Humidity : {{humidity}}</p>
+             
     </div>
     </div>
+    </div>
+    
 </body>
 
 </html>
