--- a/views/input.hbs
+++ b/views/input.hbs
@@ -1,17 +1,40 @@
 <html>
-<header>{{>header}}</header>
-<title>Weather App</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-<body>
-    
-    <form action="/weather" method="GET">
 
-    <div class="input-group mb-3">
-  <div class="input-group-prepend">
-    <span class="input-group-text" id="inputGroup-sizing-default">Place</span>
+<title>Weather App</title>
+<header>{{>header}}</header>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+  integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+  integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+
+<body>
+  <div class="d-flex justify-content-center">
+    <div class="card" style="width: 18rem;">
+      <div class="card-body">
+        <h5 class="card-title">Enter city to check weather</h5>
+        <hr>
+        <h6 class="card-subtitle mb-2 text-muted">
+
+          <form action='/weather' method="GET">
+
+            <div class="input-group mb-3">
+              <div class="input-group-prepend">
+                <span class="input-group-text" id="inputGroup-sizing-default">Place</span>
+              </div>
+              <input type="text" class="form-control" id="place" name="place" aria-label="Default"
+                aria-describedby="inputGroup-sizing-default">
+            </div>
+
+            <button type="submit" id="submit" class="btn btn-outline-primary">Submit</button>
+             <button type="button" id="random" class="btn btn-outline-primary">Get Random Puzzle</button>
+      </div>
+      </form>
+      </h6>
+      <p class="alert alert-light" id="puzzle"></p>
+    </div>
   </div>
-  <input type="text" class="form-control" id="place" name="place" aria-label="Default" aria-describedby="inputGroup-sizing-default">
-</div>
-    <button type="submit" id="submit" class="btn btn-outline-primary">Submit</button>
-    </form>
+  <script src="js/app.js"></script>
+</body>
+
+</html>
