--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,29 +2,78 @@
 
 <title>Weather App</title>
 <header> {{>header}}</header>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-<body>
- <div class="d-flex justify-content-center">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+  integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+  integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-<div class="card" style="width: 24rem;">
-      <img class="card-img-top" src="{{icon}}" alt="Card image cap" width="150" height="200">
-     <div class="card-body">
-    <h1 class="card-title">{{Place}}</h1> 
-     <h5 class="card-title">{{Country}} </h5> 
-     <h4 style="text-align:left">{{weatherdesc}}</h4>
-     <p class="card-text">Feels Like : {{feelslike}}</p>
-     <p class="card-text">LocalTime : {{localtime}}</p>
-     <p class="card-text">Observation Time : {{observationtime}}</p>
-     <p class="card-text">Temperature : {{Temp}}</p>
-       <p class="card-text">Wind Speed : {{windspeed}}</p>
-         <p class="card-text">Wind Direction : {{winddirection}}</p>
-           <p class="card-text">Humidity : {{humidity}}</p>
-             
+<body><div class="main-content">
+    <div class="d-flex justify-content-left">
+      <div class="jumbotron border border-success">
+        
+        <h1 class="card-title"><img class="img-fluid" src="{{icon}}"></img> {{Place}}</h1>
+        <h5 class="card-title">{{Country}} </h5>
+        <h4 style="text-align:left">{{weatherdesc}}</h4>
+        <hr>
+
+        <p class="card-text "><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-suit-heart-fill"
+            fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M4 1c2.21 0 4 1.755 4 3.92C8 2.755 9.79 1 12 1s4 1.755 4 3.92c0 3.263-3.234 4.414-7.608 9.608a.513.513 0 0 1-.784 0C3.234 9.334 0 8.183 0 4.92 0 2.755 1.79 1 4 1z" />
+          </svg> Feels Like : {{feelslike}}</p>
+        <p class="card-text "><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-clock"
+            fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm8-7A8 8 0 1 1 0 8a8 8 0 0 1 16 0z" />
+            <path fill-rule="evenodd"
+              d="M7.5 3a.5.5 0 0 1 .5.5v5.21l3.248 1.856a.5.5 0 0 1-.496.868l-3.5-2A.5.5 0 0 1 7 9V3.5a.5.5 0 0 1 .5-.5z" />
+          </svg> LocalTime : {{localtime}}</p>
+
+
+        <p class="card-text "><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-alarm"
+            fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd"
+              d="M6.5 0a.5.5 0 0 0 0 1H7v1.07a7.001 7.001 0 0 0-3.273 12.474l-.602.602a.5.5 0 0 0 .707.708l.746-.746A6.97 6.97 0 0 0 8 16a6.97 6.97 0 0 0 3.422-.892l.746.746a.5.5 0 0 0 .707-.708l-.601-.602A7.001 7.001 0 0 0 9 2.07V1h.5a.5.5 0 0 0 0-1h-3zm1.038 3.018a6.093 6.093 0 0 1 .924 0 6 6 0 1 1-.924 0zM8.5 5.5a.5.5 0 0 0-1 0v3.362l-1.429 2.38a.5.5 0 1 0 .858.515l1.5-2.5A.5.5 0 0 0 8.5 9V5.5zM0 3.5c0 .753.333 1.429.86 1.887A8.035 8.035 0 0 1 4.387 1.86 2.5 2.5 0 0 0 0 3.5zM13.5 1c-.753 0-1.429.333-1.887.86a8.035 8.035 0 0 1 3.527 3.527A2.5 2.5 0 0 0 13.5 1z" />
+          </svg> Observation Time : {{observationtime}}</p>
+        <p class="card-text "><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-thermometer"
+            fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd"
+              d="M6 2a2 2 0 1 1 4 0v7.627a3.5 3.5 0 1 1-4 0V2zm2-1a1 1 0 0 0-1 1v7.901a.5.5 0 0 1-.25.433A2.499 2.499 0 0 0 8 15a2.5 2.5 0 0 0 1.25-4.666.5.5 0 0 1-.25-.433V2a1 1 0 0 0-1-1z" />
+            <path d="M9.5 12.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z" />
+          </svg>Temperature : {{Temp}}</p>
+
+
+        <p class="card-text "><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-asterisk"
+            fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd"
+              d="M8 0a1 1 0 0 1 1 1v5.268l4.562-2.634a1 1 0 1 1 1 1.732L10 8l4.562 2.634a1 1 0 1 1-1 1.732L9 9.732V15a1 1 0 1 1-2 0V9.732l-4.562 2.634a1 1 0 1 1-1-1.732L6 8 1.438 5.366a1 1 0 0 1 1-1.732L7 6.268V1a1 1 0 0 1 1-1z" />
+          </svg> Wind Speed : {{windspeed}}</p>
+        <p class="card-text "><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-signpost-split"
+            fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <path d="M7 16h2V6H8V2h1v-.586a1 1 0 0 0-2 0V7h1v4H7v5z" />
+            <path fill-rule="evenodd"
+              d="M14 3H8v2h6l.75-1L14 3zM8 2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h6a1 1 0 0 0 .8-.4l.975-1.3a.5.5 0 0 0 0-.6L14.8 2.4A1 1 0 0 0 14 2H8zM2 8h6v2H2l-.75-1L2 8zm6-1a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H2a1 1 0 0 1-.8-.4L.225 9.3a.5.5 0 0 1 0-.6L1.2 7.4A1 1 0 0 1 2 7h6z" />
+          </svg> Wind Direction : {{winddirection}}</p>
+        <p class="card-text "><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-droplet-half"
+            fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd"
+              d="M7.21.8C7.69.295 8 0 8 0c.109.363.234.708.371 1.038.812 1.946 2.073 3.35 3.197 4.6C12.878 7.096 14 8.345 14 10a6 6 0 0 1-12 0C2 6.668 5.58 2.517 7.21.8zm.413 1.021A31.25 31.25 0 0 0 5.794 3.99c-.726.95-1.436 2.008-1.96 3.07C3.304 8.133 3 9.138 3 10c0 0 2.5 1.5 5 .5s5-.5 5-.5c0-1.201-.796-2.157-2.181-3.7l-.03-.032C9.75 5.11 8.5 3.72 7.623 1.82z" />
+            <path fill-rule="evenodd"
+              d="M4.553 7.776c.82-1.641 1.717-2.753 2.093-3.13l.708.708c-.29.29-1.128 1.311-1.907 2.87l-.894-.448z" />
+          </svg> Humidity : {{humidity}}</p>
+</div>
+      </div>
     </div>
-    </div>
-    </div>
-    
+  
 </body>
-
+<footer class="page-footer font-small special-color-dark pt-4">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 mb-4">
+        </div>
+      </div>
+    </div>
+    <div class="footer-copyright text-center py-3">© 2020 Copyright:
+      <a href="#"> Narasimha Athreya</a>
+    </div>
+  </footer>
 </html>
