--- a/views/input.hbs
+++ b/views/input.hbs
@@ -9,32 +9,52 @@
 
 
 <body>
-  <div class="d-flex justify-content-center">
-    <div class="card" style="width: 18rem;">
-      <div class="card-body">
-        <h5 class="card-title">Enter city to check weather</h5>
-        <hr>
-        <h6 class="card-subtitle mb-2 text-muted">
+  <div class="main-content">
+    <div class="d-flex justify-content-center">
 
-          <form action='/weather' method="GET">
+      <div class="jumbotron border border-success">
+        <h1 class="display-6">Weather App <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-brightness-high-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+  <path d="M12 8a4 4 0 1 1-8 0 4 4 0 0 1 8 0z"/>
+  <path fill-rule="evenodd" d="M8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z"/>
+</svg></h1>
+<hr>
+        <p class="lead">
+        <form action='/weather' method="GET">
 
-            <div class="input-group mb-3">
-              <div class="input-group-prepend">
-                <span class="input-group-text" id="inputGroup-sizing-default">Place</span>
-              </div>
-              <input type="text" class="form-control" id="place" name="place" aria-label="Default"
-                aria-describedby="inputGroup-sizing-default">
+          <div class="input-group mb-3">
+            <div class="input-group-prepend">
+              <span class="input-group-text" id="inputGroup-sizing-default">Place</span>
             </div>
+            <input type="text" class="form-control" id="place" name="place" aria-label="Default"
+              aria-describedby="inputGroup-sizing-default">
+          </div>
+          </p>
+          <hr class="my-3">
+          <p> <button type="submit" id="submit" class="btn btn-outline-primary">Submit</button> &nbsp;
+            <button type="button" id="random" class="btn btn-outline-primary">Get Random Puzzle</button>
 
-            <button type="submit" id="submit" class="btn btn-outline-primary">Submit</button>
-             <button type="button" id="random" class="btn btn-outline-primary">Get Random Puzzle</button>
+          </p>
+          <hr>
+          <h5 class="display-5" id="puzzle">
+          </h5>
       </div>
-      </form>
-      </h6>
-      <p class="alert alert-light" id="puzzle"></p>
     </div>
+
   </div>
+
   <script src="js/app.js"></script>
+
 </body>
+<footer class="page-footer font-small special-color-dark pt-4">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 mb-4">
+        </div>
+      </div>
+    </div>
+    <div class="footer-copyright text-center py-3">© 2020 Copyright:
+      <a href="#"> Narasimha Athreya</a>
+    </div>
+  </footer>
 
 </html>
