--- a/views/input.hbs
+++ b/views/input.hbs
@@ -37,6 +37,7 @@
           <hr>
           <h5 class="display-5" id="puzzle">
           </h5>
+          <h6 calss="display-6">{{error}}</h6>
       </div>
     </div>
 
